--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ form .input-container,
 
 .container .main {
   background: var(--primary-bg-color);
-  padding-top: 112px;
+  padding-top: 93px;
 }
 
 .main>*>* {
@@ -158,4 +158,33 @@ form .input-container {
 .form-row>input:focus {
   border: 2px solid var(--color-focus);
   box-shadow: 0px 2px 3px #9d9d9d;
+}
+
+.submit-btn button {
+  background: var(--accent-color);
+  color: var(--secondary-color);
+  width: 200px;
+  border: transparent;
+  border-radius: 5px;
+  padding: 8px 16px;
+  font-weight: 600;
+  cursor: pointer;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  box-shadow: 0px 2px 3px #9d9d9d;
+}
+
+.submit-btn button:active {
+  background: transparent;
+  color: var(--accent-color);
+}
+
+.login-div p {
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+
+.login-div p>a {
+  text-decoration: none;
+  color: var(--accent-color);
 }
